--- a/style.css
+++ b/style.css
@@ -1,65 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   margin: 0;
-  padding: 0;
+  padding: 0 10px;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  //border: 1px solid red;
 }
-button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background-color: #c20000;
-  color: #d9d9d9;
-  border: none;
-  outline: none;
-  font-size: 0.8rem;
-  padding: 0.5rem 0.8rem;
-  border-radius: 7px;
-  cursor: pointer;
+:root {
+  --color1: #ec4668;
 }
-button:hover {
-  background-color: #8f0000;
-  transition: 500ms;
-}
-.welcome-panel {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: 0.5s;
-}
-.welcome-panel-inner {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  border: none;
-  background-color: #ff9240;
-  color: #ffffa9;
-  font-size: 1rem;
-  border-radius: 7px;
-  padding: 1rem 1.5rem;
-  animation: slidedown 0.4s linear;
+body {
+    background-color: #dfdfdf;
 }
 
-.hide {
-  display: none;
+.center-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 300px)
 }
 
-@keyframes slidedown {
-  0% {
-    top: -10rem;
-  }
-  80% {
-    top: 50%;
-  }
-  90% {
-    top: 45%;
-  }
-  100% {
-    top: 50%;
-  }
+.title {
+  font-size: 36px;
+  font-weight: 600;
+  color: var(--color1);
+}
+.subtitle {
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.page-title-area {
+  position: relative;
+  margin-top: 36px;
+}
+.page-subtitle-area {
+  position: relative;
+  margin-top: 12px;
+}
+.page-subtitle-container {
+  width: 500px;
+}
+.team-member-area {
+  position: relative;
+  margin-top: 25px;
+  border-radius: 7px;
+}
+.team-member-item {
+  background-color: white;
+  margin: 5px 10px;
+  padding: 5px 10px;
+  border-radius: 7px;
 }
