--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
   margin: 0;
-  padding: 0 10px;
+  padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   //border: 1px solid red;
@@ -59,7 +59,7 @@ body {
 .team-member-item {
   background-color: white;
   margin: 5px 10px;
-  padding: 5px 10px;
+  padding: 5px 20px;
   border-radius: 7px;
   overflow: hidden;
 }
@@ -93,8 +93,10 @@ body {
 }
 .background-item {
   display: flex;
-
+  align-items: center;
+  margin: 5px 0;
 }
 .background-item i {
   color: black;
+  margin-right: 10px;
 }
