--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 300px)
+  grid-template-columns: repeat(auto-fit, 300px);
 }
 .flex-column {
   display: flex;
@@ -63,6 +63,7 @@ body {
   padding: 5px 20px;
   border-radius: 7px;
   overflow: hidden;
+  height: 440px;
 }
 
 
@@ -70,8 +71,8 @@ body {
   margin: 12px auto;
 }
 .ava img {
-  width: 80%;
-  height: 80%;
+  width: 160px;
+  height: 160px;
   border-radius: 50%;
   object-fit: cover;
   transition: 0.5s;
@@ -86,12 +87,12 @@ body {
   font-weight: 400;
 }
 .name {
-  font-size: 24px;
+  font-size: 18px;
   color: var(--color1);
   font-weight: 600;
 }
 .snumber {
-  font-size: 16px;
+  font-size: 14px;
   color: var(--color2);
 }
 .background {
@@ -102,18 +103,19 @@ body {
   align-items: center;
   margin: 5px 0;
   transition: 0.2s;
+  padding: 2px 5px;
 }
 .background-item i {
   color: var(--color1);
   margin-right: 10px;
 }
 .background-item:hover {
-  border: 2px solid var(--color1);
+  box-shadow: 0 0 0 2px var(--color1);
   border-radius: 7px;
-  padding: 2px 5px;
 }
 .it-interests-box {
   width: 100%;
+  height: 60px;
   background-color: var(--color1);
   border-radius: 7px;
   color: white;
