--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 }
 body {
     background-color: #dfdfdf;
-    cursor: pointer;
 }
 
 .center-center {
@@ -119,7 +118,7 @@ body {
   background-color: var(--color1);
   border-radius: 7px;
   color: white;
-  padding: 5px 10px;
+  padding: 5spx 10px;
   transition: 0.5s;
 }
 .it-interests-title {
